--- build 1016

- record audio directly in card
- show audio recording levels during audio clip and narration recording
- fix for issue when app is unresponsive after coming back from the camera
- show thumbnails and clip goals in order screen
- reduce download size by 20%

--- build 1015

- many crash fixes

--- build 1014

- fix crash on launch
- fix crash when opening publish info editor
- pass story title through to publish

--- build 1013

NOTE: you must uninstall your old build before installing this as your old photo stories are corruted by a bug in an earlier build.

- fix issue causing photo imports to be treated as video
- ditch flakey navigation drawer and move to standard one
- reduce memory use and fix crashes in photo essay stories
- publish now supports audio and photo essay stories
- Properly show thumbnail on trim dialog
- ClipCard properly displays selected clip
- make it easier to tap to expand a folded up clipcard
- save when you change selected clip 

--- build 1012

- fix downloads failures on some devices
- fix bug where incomplete previous download caused all future downloads to fail
- add progress spinner dialog on home screen while we download content

--- build 1011

- Home screen now shows your saved stories

--- build 1010

- Fix Youssef's crash
- ReviewCard now works for Audio and Photo stories
- Many narration bugfixes

--- build 1009

- fix issue blocking uploads until you closed and reopened app
- fix uploads to Youtube

--- build 1008

- allow user to view their content after publishing to Facebook, Youtube and Flickr
- fix when rendering for Facebook
- fix publishing stories with media that was imported